<resources>
    <string name="app_name">Recipe Manager</string>
    <string name="new_recipe">New Recipe</string>
    <string name="groceries">Groceries</string>
    <string name="latest_recipes">Latest Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="categories">Categories</string>
    <string name="cuisines">Cuisines</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search">search for recipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sorting Type -->
    <string name="alphabetical">Recipe Title A-Z</string>
    <string name="alphabetical_reverse">Recipe Title Z-A</string>
    <string name="time_created">Created Latest</string>
    <string name="time_created_reverse">Created First</string>
    <string name="time_last_seen">Seen Latest</string>
    <string name="time_last_seen_reverse">Seen Longest Ago</string>

    <!-- Filter Type -->
    <string name="filter_time_created">Time Created</string>
    <string name="filter_time_last_seen">Time Last Seen</string>
    <string name="filter_cuisine">Cuisine</string>
    <string name="filter_recipe_type">Recipe Type</string>

    <!-- Filter By Time -->
    <string name="last_week">Last Week</string>
    <string name="last_month">Last Month</string>
    <string name="last_quarter">Last Quarter</string>
    <string name="last_year">Last Year</string>
    <string name="before_last_year">Before Last Year </string>
    <string name="filter_error">Failure of setting filter</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="level">Level</string>
    <string name="steps">Steps</string>
    <string name="ingredients">Ingredients</string>
    <string name="add_image">Add an image</string>
    <string name="select_option">please select an option</string>
    <string name="image_from_device">Use image from device</string>
    <string name="no_camera">No camera found</string>
    <string name="image_from_photo">Take photo for image</string>
    <string name="cancel">Cancel</string>
    <string name="origin">Origin</string>
    <string name="recipe_type">Recipe Type</string>
    <string name="setDuration">Set expected duration</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="recipe_overview">Overview</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_steps">Steps</string>
    <string name="update_recipe">Update Recipe</string>
    <string name="create_recipe">Create Recipe</string>

    <string name="vegetables">Vegetables</string>
    <string name="meats_fish_substitutes">Meats/Fish/Substitutes</string>
    <string name="dairy">Dairy</string>
    <string name="grains_rice">Rice/Grains</string>
    <string name="spices">Spices/Herbs</string>
    <string name="fats_oils">Fats/Oils</string>
    <string name="nuts_baking_products">Nuts/Baking Products</string>
    <string name="beans_legumes">Beans/Legumes</string>
    <string name="fruits">Fruits</string>
    <string name="non_food">Non-food</string>
    <string name="volume">Volume</string>
    <string name="weight">Weight</string>
    <string name="distance">Distance</string>
    <string name="centimeter">Centimeter</string>
    <string name="inch">Inch</string>
    <string name="gram">Gram</string>
    <string name="kilogram">Kilogram</string>
    <string name="milligram">Milligram</string>
    <string name="millimeter">millimeter</string>
    <string name="liter">liter</string>
    <string name="milliLiter">milliliter</string>
    <string name="deciLiter">deciliter</string>
    <string name="temperature">Temperature</string>
    <string name="pound">pound</string>
    <string name="table_spoon">tablespoon</string>
    <string name="tea_spoon">teaspoon</string>
    <string name="fluid_ounce">fluid ounce</string>
    <string name="cup">cup</string>
    <string name="ounce">ounce</string>
    <string name="celsius">degrees Celsius</string>
    <string name="fahrenheit">degrees Fahrenheit</string>
    <string name="abbr_celsius">C</string>
    <string name="abbr_fahrenheit">F</string>
    <string name="abbr_milliLiter">mL</string>
    <string name="abbr_centimeter">cm</string>
    <string name="abbr_millimeter">mm</string>
    <string name="abbr_gram">g</string>
    <string name="abbr_kilogram">kg</string>
    <string name="abbr_milligram">mg</string>
    <string name="abbr_liter">L</string>
    <string name="abbr_deciLiter">dL</string>
    <string name="abbr_tea_spoon">ts</string>
    <string name="abbr_table_spoon">tbs</string>
    <string name="abbr_fluid_ounce">fl. oz.</string>
    <string name="abbr_ounce">oz.</string>
    <string name="centiLiter">centiLiter</string>
    <string name="abbr_centiLiter">cL</string>
    <string name="pinch">pinch</string>
    <string name="other">other</string>
    <string name="to_taste">to taste</string>
    <string name="portions">Portions</string>
    <string name="unit" />
    <string name="play">play</string>


</resources>