<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@id/editRecipeHostFragment"
        android:icon="@drawable/ic_add"
        android:enabled="true"
        android:title="@string/new_recipe" />
    <item
        android:id="@id/recipeOverviewFragment"
        android:icon="@drawable/ic_book"
        android:enabled="true"
        android:title="@string/all_recipes" />
    <item
        android:id="@id/groceryFragment"
        android:icon="@drawable/ic_list"
        android:enabled="true"
        android:title="@string/groceries" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:enabled="true"
        android:title="@string/settings" />

</menu>