<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph.xml"
    app:startDestination="@id/recipeOverviewFragment">
    <fragment
        android:id="@+id/recipeOverviewFragment"
        android:name="com.guidoroos.recepten.main.ui.RecipeOverviewFragment"
        android:label="@string/all_recipes"
        tools:layout="@layout/recipe_overview_fragment" >
        <action
            android:id="@+id/action_recipeOverviewFragment_to_recipeFilterFragment"
            app:destination="@id/recipeFilterFragment" />
        <action
            android:id="@+id/action_recipeOverviewFragment_to_recipeHostFragment"
            app:destination="@id/recipeHostFragment" />
        <action
            android:id="@+id/action_recipeOverviewFragment_to_editRecipeHostFragment"
            app:destination="@id/editRecipeHostFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.guidoroos.recepten.settings.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/groceryFragment"
        android:name="com.guidoroos.recepten.grocery.GroceryFragment"
        android:label="@string/groceries"
        tools:layout="@layout/grocery_fragment" />
    <fragment
        android:id="@+id/recipeFilterFragment"
        android:name="com.guidoroos.recepten.filter.ui.RecipeFilterFragment"
        android:label="RecipeFilterFragment" >
        <action
            android:id="@+id/action_recipeFilterFragment_to_recipeOverviewFragment"
            app:destination="@id/recipeOverviewFragment"
            app:popUpTo="@id/recipeOverviewFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recipeHostFragment"
        android:name="com.guidoroos.recepten.recipe.ui.viewrecipe.RecipeHostFragment"
        android:label="RecipeHostFragment">
        <argument
            android:name="recipe"
            app:argType="com.guidoroos.recepten.db.Recipe"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_recipeHostFragment_to_editRecipeHostFragment"
            app:destination="@id/editRecipeHostFragment"
            app:popUpTo="@id/editRecipeHostFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/editRecipeHostFragment"
        android:name="com.guidoroos.recepten.recipe.ui.editrecipe.EditRecipeHostFragment"
        android:label="EditRecipeHostFragment">
        <argument
            android:name="recipe"
            app:argType="com.guidoroos.recepten.db.Recipe"
            app:nullable="true"
            android:defaultValue="@null"/>
        <action
            android:id="@+id/action_editRecipeHostFragment_to_recipeHostFragment"
            app:destination="@id/recipeHostFragment"
            app:popUpTo="@id/recipeOverviewFragment"
            app:popUpToInclusive="false" />
    </fragment>

</navigation>